--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=bookclub;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
