working on login method

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "super secret token that will be changed soon"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Port=5432;Database=bookclub;"
   },
