containerized app, updated startup class to set connection string based on env

--- a/appsettings.json
+++ b/appsettings.json
@@ -3,7 +3,7 @@
     "Token": "super secret token that will be changed soon"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=bookclub;"
+    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=bookclub;"
   },
   "Logging": {
     "LogLevel": {
